# OPE_demo

./: CMakeLists.txt  README.md
Client/: ope_client.cpp  ope_client.h
Server/: BSTree.h  BSTree_test.cpp  ope_server.cpp  ope_server.h
Util/: AES.cpp  AES.h  Base64.cpp  Base64.h
